--- a/src/HomePage/Styling/HomePage3Style.css
+++ b/src/HomePage/Styling/HomePage3Style.css
@@ -1,5 +1,5 @@
 #about-container{
-    margin: 3rem 0rem 0rem 0rem;
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,8 +43,7 @@
 
 @media (min-width: 700px){
     #about-container{
-        margin: 12rem 0rem 0rem 0rem;
-    
+        margin: 0;
     }
     #about-heading{
         font-size: 4rem;
